--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,8 @@ services:
     name: diagnosis-backend
     env: python
     rootDir: diagnosis_app/flask-backend
-    buildCommand: pip install -r requirements.txt
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.9
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120
